--- a/sass/site/compatibility/edd.scss
+++ b/sass/site/compatibility/edd.scss
@@ -1116,6 +1116,11 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 				padding-bottom: 5px;
 				margin-bottom: 5px;
 			}
+			p {
+				&:last-child{
+					margin-bottom: 15px;
+				}
+			}
 			> div{
 				padding: 5px 30px;
 				margin-bottom: 5px;
@@ -1136,6 +1141,9 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 		}
 	}
 	#edd_checkout_form_wrap{
+		label{
+			font-weight: bold;
+		}
 		fieldset {
 			border: 1px solid #eee;
 			margin: 0 0 20px;
@@ -1150,6 +1158,10 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 		#edd_show_discount{
 			border: 1px solid #eee;
 			margin:0 0 20px; 
+		}
+		#edd_final_total_wrap{
+			padding-top: 10px;
+			padding-bottom: 10px;
 		}
 		#edd-payment-mode-wrap{
 			label {
